2005-01-25  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Use new
	IWorkbenchWindow.ShowNotification for when a file has been modified
	outside MD.

2005-01-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Pads/CompilerMessageView.cs: 
	* Makefile.am: CompilerMessageView moved to Monodevelop.Base. 
	
	* Commands/SearchCommands.cs:
	* Search/SearchReplaceManager.cs:
	* Search/DocumentIterator/CurrentDocumentIterator.cs:
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs:
	* Search/DocumentIterator/AllOpenDocumentIterator.cs:
	* Gui/SourceEditorDisplayBinding.cs: New GUI for warning about modified
	files.

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorDisplayBinding.cs: Use a different method for detecting
	that a file change event is the result of a save operation (the current
	doesn't work if the that event is delayed).

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Dialogs/ExportProjectToHtmlDialog.cs:
	* InsightWindow/MethodInsightDataProvider.cs:
	* InsightWindow/InsightWindow.cs:
	* InsightWindow/IInsightDataProvider.cs:
	* InsightWindow/IndexerInsightDataProvider.cs:
	* CodeCompletion/CompletionListWindow.cs
	* CodeCompletion/CompletionWindow.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs: 
	* CodeCompletion/ICompletionDataProvider.cs:
	* CodeCompletion/CodeCompletionDataProvider.cs: 
	* CodeCompletion/TemplateCompletionDataProvider.cs:
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs:
	  Follow architecture changes.

2004-12-14  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Finish off some code to detect
	if a source file is changed externally, so it can be reloaded.

2004-12-14  Todd Berman  <tberman@off.net>
	
	* Gui/SourceEditorBuffer.cs: Single line commenting changed a bit.
	Fixed bug #70574.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Search/SearchReplaceUtilities.cs: 